==> c3277250996rb/IMU/分支/2025/0313_spi的bug找到了_指针传递导致的/hal/User/flash/bsp_spi_flash.c <==
#include "./flash/bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
   /*##-1- Configure the SPI peripheral #######################################*/
  /* Set the SPI parameters */
  // SpiHandle.Instance               = SPIx;
  // SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
  // SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  // SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;
  // SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  // SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
  // SpiHandle.Init.CRCPolynomial     = 7;
  // SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  // SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  // SpiHandle.Init.NSS               = SPI_NSS_SOFT;
  // SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLE;
  
  // SpiHandle.Init.Mode = SPI_MODE_MASTER;


  SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  SpiHandle.Init.Mode              = SPI_MODE_MASTER;
  SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;
  SpiHandle.Init.NSS               = SPI_NSS_SOFT;
  SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
  SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SpiHandle.Init.CRCPolynomial     = 7;

  SpiHandle.Instance               = SPIx;
  SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
  SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLE;
  



  HAL_SPI_Init(&SpiHandle); 
  
  __HAL_SPI_ENABLE(&SpiHandle);     
}

uint8_t SPI_FLASH_SendByte(uint8_t byte){
  return SPI_Register_Write_Read(SPI_Class_1, byte);
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{

#if 1
  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待发送缓冲区为空，TXE事件 */
  while (__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_TXE ) == RESET)
   {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(0);
   }

  /* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
  WRITE_REG(SpiHandle.Instance->DR, byte);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待接收缓冲区非空，RXNE事件 */
  while (__HAL_SPI_GET_FLAG( &SpiHandle, SPI_FLAG_RXNE ) == RESET)
   {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(1);
   }

  /* 读取数据寄存器，获取接收缓冲区数据 */
  return READ_REG(SpiHandle.Instance->DR);
#endif
}
